[package]
name = "prytulafoundation_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
dptree = "0.3.0"
log = "0.4.17"
pretty_env_logger = "0.4.0"
sqlx = { version = "0.6.1", features = ["runtime-tokio-rustls", "mysql"] }
teloxide = { version = "0.10.1", features = ["macros", "auto-send"] }
tokio = { version = "1.20.1", features = ["rt-multi-thread", "macros"] }
